Fix Accomodation mobile design

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,5 +1,6 @@
 .mainWrapper {
   max-width: 1240px;
+  min-width: 300px;
   width: 90%;
   margin: auto;
   text-align: center;
