--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -9,7 +9,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  object-fit: none;
+  object-fit: cover;
   border-radius: 25px;
 }
 
@@ -43,7 +43,6 @@
   }
 
   .picture {
-    object-fit: contain;
     border-radius: 10px;
   }
 
