--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -103,7 +103,7 @@
 
   .container50 {
     width: 100%;
-    margin-top: 0;
+    margin-top: 16px;
   }
 
   .top {
