--- a/src/pages/Accomodation/Accomodation.module.css
+++ b/src/pages/Accomodation/Accomodation.module.css
@@ -26,12 +26,15 @@
 .tagContainer {
   margin-top: 20px;
   display: flex;
+  flex-wrap: wrap;
   column-gap: 10px;
+  row-gap: 5px;
 }
 
 .ownerRatingContainer {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-end;
   row-gap: 24px;
@@ -72,8 +75,8 @@
   }
 
   .headerContainer {
-    margin-top: 0;
-    margin-bottom: 16px;
+    margin-top: 15px;
+    /* margin-bottom: 16px; */
     flex-direction: column;
     row-gap: 16px;
   }
